# LoreDesktopAndWebSystem

./: .gitignore  ARCHITECTURE.md  DESIGN.md  LOREHUB_UI_SPEC.md  QUALITY_STANDARDS.md  README.md
docs/: ARCHITECTURE_AND_DESIGN.md  LECTURE_NOTES.md  TECHNICAL_REFERENCE.md  lore-ecosystem-docs.html
loreforge-client/: CMakeLists.txt
loreforge-client/qml/: CommitHistoryView.qml  LoginScreen.qml  Main.qml  PrimaryButton.qml  RepositoryCard.qml  RepositoryListScreen.qml  RepositoryWorkspaceScreen.qml  Theme.qml
loreforge-client/src/: ApiClient.cpp  ApiClient.h  AuthController.cpp  AuthController.h  CommitListModel.cpp  CommitListModel.h  LoreImageProvider.cpp  LoreImageProvider.h  RepositoryListModel.cpp  RepositoryListModel.h  RepositoryTreeModel.cpp  RepositoryTreeModel.h  main.cpp
loreforge-server-admin/: CMakeLists.txt  CMakePresets.json
loreforge-server-admin/qml/: AccessControlPanel.qml  DirectoryNode.qml  EnvironmentPanel.qml  Main.qml  RoleNode.qml  StatusCard.qml
loreforge-server-admin/src/: ApiClient.h  DockerController.cpp  DockerController.h  LoreServerController.cpp  LoreServerController.h  PermissionConfigController.cpp  PermissionConfigController.h  main.cpp
lorehub-api/: .gitignore  Cargo.toml
lorehub-api/src/: auth.rs  db.rs  handlers.rs  image_assets.rs  main.rs  models.rs  state.rs
lorehub-web/: package-lock.json  package.json
lorehub-web/src/: proxy.ts
lorehub-web/src/app/: globals.css  layout.tsx  page.tsx
lorehub-web/src/app/(app)/: layout.tsx  page.tsx
lorehub-web/src/app/(app)/access-control/: page.tsx
lorehub-web/src/app/(app)/pulls/: page.tsx
lorehub-web/src/app/(app)/pulls/[id]/: page.tsx
lorehub-web/src/app/(app)/repositories/[slug]/: layout.tsx  page.tsx
lorehub-web/src/app/(app)/repositories/[slug]/commits/: page.tsx
lorehub-web/src/app/(app)/repositories/[slug]/commits/[hash]/: page.tsx
lorehub-web/src/app/(app)/repositories/[slug]/settings/: page.tsx
lorehub-web/src/app/(app)/settings/: page.tsx
lorehub-web/src/app/access-control/: page.tsx
lorehub-web/src/app/login/: page.tsx
lorehub-web/src/app/pulls/: page.tsx
lorehub-web/src/app/pulls/[id]/: page.tsx
lorehub-web/src/app/repositories/[slug]/: layout.tsx  page.tsx
lorehub-web/src/app/repositories/[slug]/commits/: page.tsx
lorehub-web/src/app/repositories/[slug]/commits/[hash]/: page.tsx
lorehub-web/src/app/settings/: page.tsx
lorehub-web/src/components/: AccessControlExplorer.tsx  AudioPlayer.tsx  AuditLogList.tsx  AuthGate.tsx  AuthorAvatar.tsx  BranchGraph.tsx  ChangeTypeBadge.tsx  ChangedFileRow.tsx  CommentThread.tsx  CommitRow.tsx  DiffFileViewer.tsx  DirectoryTree.tsx  FileDetail.tsx  GlobalSearch.tsx  ImageDiffSlider.tsx  MembersTable.tsx  Model3DDiffToggle.tsx  ModelViewer.tsx  PRStatusPill.tsx  PageHeader.tsx  PermissionMatrix.tsx  PlaceholderScreen.tsx  PullRequestRow.tsx  ReadmePreview.tsx  RepoTabs.tsx  RepositoryBrowser.tsx  RepositoryCard.tsx  RepositoryExplorer.tsx  RepositorySettingsForm.tsx  Sidebar.tsx  StorageUsageCard.tsx  StreamingPreview.tsx  TextDiffViewer.tsx  TextFileContent.tsx  TreeView.tsx  icons.tsx
lorehub-web/src/lib/: api.ts  auth-server.ts  graph-layout.ts  mock-access-control.ts  mock-commits.ts  mock-data.ts  mock-org.ts  mock-pull-requests.ts  mock-tree.ts  tree-utils.ts  types.ts
